# GatewayKit

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  README.txt  alembic.ini  docker-compose.backend.yml  docker-compose.yml  fix.patch  pyproject.toml
.github/workflows/: ci.yml
apps/auth_svc/: Dockerfile  auth_svc_main.py  i_auth_handler.py  main.py  requirements.txt
apps/gateway/: Dockerfile  dependencies.py  gateway_main.py  main.py  requirements.txt
doc/: Документ 1 Регламент Ядра Симуляции и Маршрутизации.txt  новый 4.txt
docs/: ARCHITECTURE.md  BOOTSTRAP.md  DB_SCHEMAS.md  ENVIRONMENT.md  ERROR_MODEL.md  HEALTH.md  LOGGING.md  MESSAGING.md  REPO_GUIDE.md  SECURITY_BASELINE.md  VERSIONING.md
docs/backlog/: PERFORMANCE_TUNING.md
infra/: docker-compose.yml
infra/migrations/: env.py
infra/rabbitmq/: definitions.json  rabbitmq.conf
libs/app/: bootstrap.py  errors.py  health.py  logging_middleware.py  security_middleware.py
libs/containers/: auth_container.py  gateway_container.py
libs/domain/: __init__.py
libs/infra/: central_redis_client.py  db.py  di.py  migrate.py  mongo_client.py  worker_db_utils.py
libs/messaging/: base_listener.py  dto.py  i_message_bus.py  rabbitmq_message_bus.py  rabbitmq_names.py  rabbitmq_topology.py
libs/utils/: __init__.py  ids.py  json_logging.py  logging_setup.py  redis_keys.py  transactional_decorator.py
migrations/: env.py
migrations/versions/: 0001_init_auth_infra.py  0001_init_auth_schema.py  0002_create_auth_tables.py
scripts/: generate_schemas.py
tests/: conftest.py  helpers.py
(+60 files in other folders)
